; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_gxf.c_fps_umf2avr.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_gxf.c_fps_umf2avr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@fps_umf2avr.map = internal constant [5 x %struct.TYPE_3__] [%struct.TYPE_3__ { i32 50, i32 1 }, %struct.TYPE_3__ { i32 60000, i32 1001 }, %struct.TYPE_3__ { i32 24, i32 1 }, %struct.TYPE_3__ { i32 25, i32 1 }, %struct.TYPE_3__ { i32 30000, i32 1001 }], align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32)* @fps_umf2avr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @fps_umf2avr(i32 %0) #0 {
  %2 = alloca %struct.TYPE_3__, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = and i32 %5, 1984
  %7 = ashr i32 %6, 6
  %8 = call i32 @av_log2(i32 %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds [5 x %struct.TYPE_3__], [5 x %struct.TYPE_3__]* @fps_umf2avr.map, i64 0, i64 %10
  %12 = bitcast %struct.TYPE_3__* %2 to i8*
  %13 = bitcast %struct.TYPE_3__* %11 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %12, i8* align 8 %13, i64 8, i1 false)
  %14 = bitcast %struct.TYPE_3__* %2 to i64*
  %15 = load i64, i64* %14, align 4
  ret i64 %15
}

declare dso_local i32 @av_log2(i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
